# ppx_type_directed_value

./: README.md  README.mdx  ppx_type_directed_value.opam
bench/: bench.ml  dune
examples/: dune  ppx_type_directed_value_examples.ml  type_directed_command.ml  type_directed_command.mli  type_directed_enumerate.ml  type_directed_enumerate.mli  type_directed_equal.ml  type_directed_equal.mli  type_directed_validate.ml  type_directed_validate.mli
ppx_runtime/: converters.ml  converters.mli  converters_intf.ml  dune  type_directed.ml  type_directed.mli
src/: attrs.ml  attrs.mli  attrs_intf.ml  dune  expand_record.ml  expand_record.mli  expand_tuple.ml  expand_tuple.mli  expand_type_directed.ml  expand_type_directed.mli  expand_type_directed_value.ml  expand_type_directed_value.mli  expand_variant.ml  expand_variant.mli  pattern_or_expression.ml  pattern_or_expression.mli  ppx_type_directed_value.ml  ppx_type_directed_value.mli  utils.ml  utils.mli
test/: dune  test.ml
test/inline/: applicative.ml  contravariant.ml  covariant.ml  dune  equals.ml  readme_scratch.ml
